--- a/02_Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
+++ b/02_Avalonia/ADIN.Avalonia/Views/MainWindow.axaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:view="using:ADIN.Avalonia.Views"
         mc:Ignorable="d" d:DesignHeight="880" d:DesignWidth="1410"
+        Classes="HmcWindow"
 		MinHeight="880"
 		MinWidth="1410"
         x:Class="ADIN.Avalonia.Views.MainWindow"
@@ -12,7 +13,8 @@
 		x:CompileBindings="False"
         Icon="/Assets/avalonia-logo.ico"
         Title="ADIN.Avalonia"
-        SystemDecorations="{OnPlatform BorderOnly, Linux=Full}">
+        SystemDecorations="{OnPlatform BorderOnly, Linux=Full}"
+        ExtendClientAreaToDecorationsHint="True">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
@@ -20,46 +22,48 @@
 		<vm:MainWindowViewModel/>
     </Design.DataContext>
 
-	<Grid RowDefinitions="Auto,11*,3*">
+	<ThemeVariantScope RequestedThemeVariant="{Binding CurrentTheme}">
+		<Grid RowDefinitions="Auto,11*,3*">
 
-		<!--Navigation Bar-->
-		<HmcNavigationBar Grid.Row="0" Size="sm" AppName="ADIN Ethernet Phy" ReplaceAppBar="True">
-			<HmcNavigationLink Size="sm" HasIcon="False" Content="Link Properties" Command="{Binding NavigateLinkPropertiesCommand}"/>
-			<HmcNavigationLink Size="sm" HasIcon="False" Content="Loopback &amp; Frame Generator" Command="{Binding NavigateLoopbackFrameGenCommand}"/>
-			<HmcNavigationLink Size="sm" HasIcon="False" Content="Register Access" Command="{Binding NavigateRegisterAccessCommand}"/>
-		</HmcNavigationBar>
+			<!--Navigation Bar-->
+			<HmcNavigationBar Size="sm" AppName="ADIN Ethernet Phy" ReplaceAppBar="{OnPlatform True, Linux=False}">
+				<HmcNavigationLink Size="sm" HasIcon="False" Content="Link Properties" Command="{Binding NavigateLinkPropertiesCommand}"/>
+				<HmcNavigationLink Size="sm" HasIcon="False" Content="Loopback &amp; Frame Generator" Command="{Binding NavigateLoopbackFrameGenCommand}"/>
+				<HmcNavigationLink Size="sm" HasIcon="False" Content="Register Access" Command="{Binding NavigateRegisterAccessCommand}"/>
+			</HmcNavigationBar>
 
-		<Grid Grid.Row="1" ColumnDefinitions="210,6*,5*">			
-			<!--Left Side UI-->
-			<ContentControl Grid.Column="0" Background="White">
-				<Grid RowDefinitions="2*,3*">
-					<view:DeviceListingView DataContext="{Binding DeviceListingVM}" Grid.Row="0" Margin="-1 -1 0 0"/>
-					<view:ExtraCommandsView DataContext="{Binding ExtraCommandsVM}" Grid.Row="1" Margin="-1 -1 0 -1"/>
-				</Grid>
-			</ContentControl>
-			<!--Main UI-->
-			<ContentControl Grid.Column="1" Grid.ColumnSpan="{Binding ColumnSpan}" Content="{Binding CurrentView}"/>
-			<ContentControl Grid.Column="2" Margin="-16 0 0 0" Content="{Binding CurrentStatusView}" IsEnabled="{Binding HasLoadedDevice}"/>
+			<Grid Grid.Row="1" ColumnDefinitions="210,6*,5*">
+				<!--Left Side UI-->
+				<ContentControl Grid.Column="0">
+					<Grid RowDefinitions="2*,3*">
+						<view:DeviceListingView DataContext="{Binding DeviceListingVM}" Grid.Row="0" Margin="-1 -1 0 0"/>
+						<view:ExtraCommandsView DataContext="{Binding ExtraCommandsVM}" Grid.Row="1" Margin="-1 -1 0 -1"/>
+					</Grid>
+				</ContentControl>
+				<!--Main UI-->
+				<ContentControl Grid.Column="1" Grid.ColumnSpan="{Binding ColumnSpan}" Content="{Binding CurrentView}"/>
+				<ContentControl Grid.Column="2" Margin="-16 0 0 0" Content="{Binding CurrentStatusView}" IsEnabled="{Binding HasLoadedDevice}"/>
+			</Grid>
+
+			<!--Bottom Side UI-->
+			<Grid Grid.Row="2" ColumnDefinitions="Auto,*">
+				<view:RegisterReadWriteView DataContext="{Binding RegisterAccessVM}" Grid.Column="0"/>
+				<view:LogActivityView DataContext="{Binding LogActivityVM}" Grid.Column="1" Grid.ColumnSpan="2" Margin="-1 0 0 0"/>
+			</Grid>
+
+			<!--Loading Mask-->
+			<Border Grid.Row="1" Grid.RowSpan="2" Background="{StaticResource layout-overlay}" Opacity="80" IsVisible="{Binding IsLoading}"/>
+			<HmcCard Grid.Row="1" Grid.RowSpan="2" IsVisible="{Binding IsLoading}" VerticalAlignment="Center" HorizontalAlignment="Center" HideSeparators="True">
+				<HmcCard.Header>
+					<HmcContainerHeader Heading="Please Wait" Margin="0 0 16 0"/>
+				</HmcCard.Header>
+				<HmcCard.HeaderAction>
+					<HmcSpinner Size="md" Kind="primary"/>
+				</HmcCard.HeaderAction>
+				<TextBlock Text="{Binding LoadingString}"/>
+			</HmcCard>
+
 		</Grid>
-
-		<!--Bottom Side UI-->
-		<Grid Grid.Row="2" ColumnDefinitions="Auto,*">
-			<view:RegisterReadWriteView DataContext="{Binding RegisterAccessVM}" Grid.Column="0"/>
-			<view:LogActivityView DataContext="{Binding LogActivityVM}" Grid.Column="1" Grid.ColumnSpan="2" Margin="-1 0 0 0"/>
-		</Grid>
-
-		<!--Loading Mask-->
-		<Border Grid.Row="1" Grid.RowSpan="2" Background="Black" Opacity="80" IsVisible="{Binding IsLoading}"/>
-		<HmcCard Grid.Row="1" Grid.RowSpan="2" IsVisible="{Binding IsLoading}" VerticalAlignment="Center" HorizontalAlignment="Center" HideSeparators="True">
-			<HmcCard.Header>
-				<HmcContainerHeader Heading="Loading values" Margin="0 0 16 0"/>
-			</HmcCard.Header>
-			<HmcCard.HeaderAction>
-				<HmcSpinner Size="md" Kind="primary"/>
-			</HmcCard.HeaderAction>
-			<TextBlock Text="Please wait..."/>
-		</HmcCard>
-		
-	</Grid>
+	</ThemeVariantScope>
 
 </Window>
